[package]
name = "todo-issue"
version = "0.1.1"
authors = ["Warren Galyen <wgalyen@hotmail.com>"]
description = "CLI tool that converts forgotten TODO comments into actionable GitHub issues."
license = "MIT"
readme = "README.md"
exclude = ["dist/"]
keywords = ["TODO", "comments", "cli", "GitHub", "issues"]
categories = ["command-line-utilities", "text-processing", "development-tools"]
documentation ="https://github.com/wgalyen/todo-issue/"
homepage ="https://github.com/wgalyen/todo-issue/"
repository ="https://github.com/wgalyen/todo-issue/"
edition = "2018"

[dependencies]
clap = "2.33.0"
console = "0.14.0"
dialoguer = "0.4.0"
glob = "0.3.0"
reqwest = "0.9.18"
serde = "1.0.97"
serde_json = "1.0.61"